Fix more broken links
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/examples/airship-battle.mdx
+++ b/docs/examples/airship-battle.mdx
@@ -40,7 +40,7 @@ These filters is used to prevent people from placing dispensers or obsidian in t
 ```
 
 [<i className="icon-right">➡️</i>](/docs/modules/format/teams)
-Defines the teams [colors](/reference/formatting#chatColors), names and how many people can be on the teams.
+Defines the teams [colors](/docs/reference/misc/formatting#chatColors), names and how many people can be on the teams.
 
 ```xml
 <teams>
