--- a/docs/modules/blocks/blockdrops.mdx
+++ b/docs/modules/blocks/blockdrops.mdx
@@ -141,7 +141,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           What to replace the mined block with.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
@@ -316,7 +316,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           What to replace the mined block with.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
