--- a/docs/modules/environment/border.mdx
+++ b/docs/modules/environment/border.mdx
@@ -113,7 +113,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
           </i>
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
@@ -125,7 +125,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
           The time it takes to transition from the previous state to this state.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
@@ -173,7 +173,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
           them within this time.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>15s</td>
       </tr>
