--- a/docs/modules/environment/mobs.mdx
+++ b/docs/modules/environment/mobs.mdx
@@ -92,7 +92,7 @@ Mob spawns can also be filtered against any other filter type including regions.
         </td>
         <td>Filter the reason a mob is being spawned.</td>
         <td>
-          <a href="/reference/spawn_reason">Spawn Reason</a>
+          <a href="/docs/reference/entities/spawn-reasons">Spawn Reason</a>
         </td>
       </tr>
       <tr>
@@ -101,7 +101,9 @@ Mob spawns can also be filtered against any other filter type including regions.
         </td>
         <td>The mob to filter for.</td>
         <td>
-          <a href="/reference/entity_types#creatures">Creature Type</a>
+          <a href="/docs/reference/entities/entity-types#creatures">
+            Creature Type
+          </a>
         </td>
       </tr>
       <tr>
@@ -110,7 +112,7 @@ Mob spawns can also be filtered against any other filter type including regions.
         </td>
         <td>The entity to filter for.</td>
         <td>
-          <a href="/reference/entity_types">Entity Type</a>
+          <a href="/docs/reference/entities/entity-types">Entity Type</a>
         </td>
       </tr>
     </tbody>
