--- a/docs/modules/format/teams.mdx
+++ b/docs/modules/format/teams.mdx
@@ -77,7 +77,9 @@ It is common for maps to only have 2 teams, although more are possible it usuall
         </td>
         <td>The team's display color.</td>
         <td>
-          <a href="/reference/formatting#chatColors">Chat Color Name</a>
+          <a href="/docs/reference/misc/formatting#chatColors">
+            Chat Color Name
+          </a>
         </td>
       </tr>
       <tr>
@@ -86,7 +88,9 @@ It is common for maps to only have 2 teams, although more are possible it usuall
         </td>
         <td>The color of a player's name tag on this team.</td>
         <td>
-          <a href="/reference/formatting#chatColors">Chat Color Name</a>
+          <a href="/docs/reference/misc/formatting#chatColors">
+            Chat Color Name
+          </a>
         </td>
       </tr>
       <tr>
