--- a/docs/modules/gear/classes.mdx
+++ b/docs/modules/gear/classes.mdx
@@ -94,7 +94,7 @@ Classes allow the player to pick a specific class at the beginning of the game w
         </td>
         <td>Icon shown in the class picker menu.</td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
