--- a/docs/modules/gear/crafting.mdx
+++ b/docs/modules/gear/crafting.mdx
@@ -66,7 +66,7 @@ The crafting module allows custom shaped and shapeless crafting recipes and smel
         </td>
         <td>Disable all vanilla recipes for this item.</td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
@@ -215,7 +215,7 @@ Blank ingredient spots are specifed with a dot `.`
           <br />A shaped recipe requires at least one ingredient.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
@@ -344,7 +344,7 @@ Unlike a shaped recipe, shapeless recipes do not require that their items are ar
           <br />A shapeless recipe requires at least one ingredient.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
@@ -440,7 +440,7 @@ Smelt recipes specify what a material gets smelted into in a furnace.
           <br />A smelt recipe only accepts one ingredient.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
