--- a/docs/modules/gear/item-mods.mdx
+++ b/docs/modules/gear/item-mods.mdx
@@ -112,7 +112,7 @@ The item mods module allows modification of all items present on a map or create
         </td>
         <td>An individual material to match.</td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
