--- a/docs/modules/gear/kits.mdx
+++ b/docs/modules/gear/kits.mdx
@@ -392,7 +392,7 @@ affect a modifier applied by a different kit.
           <label>{`<attribute> </attribute>`}</label>
         </td>
         <td>
-          <a href="/reference/attributes">Attribute name</a>
+          <a href="/docs/reference/items/attributes">Attribute name</a>
         </td>
       </tr>
     </tbody>
@@ -573,7 +573,7 @@ Recharging of the shield is based on when damage was taken last, every time a pl
           Time to wait after a player is last damaged to recharge the shield.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>4s</td>
       </tr>
@@ -650,7 +650,7 @@ This element's enabled attribute can be used to disable double-jump inside regio
         </td>
         <td>Recharge time till the player can double jump again.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>2.5s</td>
       </tr>
