--- a/docs/modules/gear/pickups.mdx
+++ b/docs/modules/gear/pickups.mdx
@@ -97,7 +97,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Currently only accepts <label>ENDER CRYSTAL</label>
         </td>
         <td>
-          <a href="/reference/entity_types">Entity Type</a>
+          <a href="/docs/reference/entities/entity-types">Entity Type</a>
         </td>
         <td>
           <span className="badge badge--secondary">Ender Crystal</span>
@@ -191,7 +191,7 @@ A `<point>` region does not return a randomized position but can still be used t
           refreshed.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>3 sec</td>
       </tr>
@@ -201,7 +201,7 @@ A `<point>` region does not return a randomized position but can still be used t
         </td>
         <td>Time until the pickup is refreshed and can be picked up again.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>3 sec</td>
       </tr>
