--- a/docs/modules/gear/potions.mdx
+++ b/docs/modules/gear/potions.mdx
@@ -56,7 +56,7 @@ Effect ID's should be specified without their `minecraft:` prefix.
         </td>
         <td>Duration of the effect.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>oo (forever)</td>
       </tr>
