--- a/docs/modules/gear/projectiles.mdx
+++ b/docs/modules/gear/projectiles.mdx
@@ -101,7 +101,7 @@ or the item form of the custom projectile itself.
         </td>
         <td>The entity this projectile is materialized as.</td>
         <td>
-          <a href="/reference/entity_types">Entity Type</a>
+          <a href="/docs/reference/entities/entity-types">Entity Type</a>
         </td>
         <td>
           <span className="badge badge--secondary">Arrow</span>
@@ -180,7 +180,7 @@ or the item form of the custom projectile itself.
         </td>
         <td>Minimum time between each firing of this projectile.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
@@ -287,7 +287,7 @@ Bows can be modified to shoot a different projectile at a custom speed. The PGM 
         </td>
         <td>The entity to use as the bows projectile.</td>
         <td>
-          <a href="/reference/entity_types">Entity Type</a>
+          <a href="/docs/reference/entities/entity-types">Entity Type</a>
         </td>
       </tr>
       <tr>
