--- a/docs/modules/gear/repair-remove-keep.mdx
+++ b/docs/modules/gear/repair-remove-keep.mdx
@@ -41,7 +41,9 @@ This also works with non-tool items such as arrows. When people pick up item in 
           A single tool that will be repaired, can be anything with durability.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">Material Name</a>
+          <a href="/docs/reference/items/inventory#material_matchers">
+            Material Name
+          </a>
         </td>
       </tr>
     </tbody>
@@ -91,7 +93,9 @@ Defines items that will be deleted when dropped on the map. Also works when item
         </td>
         <td>The item that will be removed when dropped.</td>
         <td>
-          <a href="/reference/inventory#material_matchers">Material Name</a>
+          <a href="/docs/reference/items/inventory#material_matchers">
+            Material Name
+          </a>
         </td>
       </tr>
     </tbody>
@@ -144,7 +148,9 @@ Defines items that will be kept on death. If there is a spawn kit, kept items wi
           respawn.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">Material Name</a>
+          <a href="/docs/reference/items/inventory#material_matchers">
+            Material Name
+          </a>
         </td>
       </tr>
     </tbody>
@@ -199,7 +205,9 @@ Similar to `<itemkeep>` except that the specified items are only kept if they ar
           they die and respawn.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">Material Name</a>
+          <a href="/docs/reference/items/inventory#material_matchers">
+            Material Name
+          </a>
         </td>
       </tr>
     </tbody>
