--- a/docs/modules/gear/tnt.mdx
+++ b/docs/modules/gear/tnt.mdx
@@ -84,7 +84,7 @@ If licensing is enabled only players with a TNT license can use TNT. This licens
         </td>
         <td>Time till the TNT explodes once it is ignited.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
