--- a/docs/modules/mechanics/filters.mdx
+++ b/docs/modules/mechanics/filters.mdx
@@ -160,7 +160,7 @@ Filter matchers test for specific conditions or properties of things.
         </td>
         <td>
           Filter if the specified
-          <a href="/reference/time_periods">time period</a>
+          <a href="/docs/reference/misc/time-periods">time period</a>
           has elapsed since the match started.
         </td>
         <td>
@@ -256,11 +256,11 @@ Filter matchers test for specific conditions or properties of things.
         </td>
         <td>
           Matches blocks by their
-          <a href="/reference/inventory#material_finder">Material</a>
+          <a href="/docs/reference/items/inventory#material_finder">Material</a>
           name.
           <br />
           Accepts a
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
