--- a/docs/modules/mechanics/spawners.mdx
+++ b/docs/modules/mechanics/spawners.mdx
@@ -105,7 +105,7 @@ The module uses the same syntax as <a href="/docs/modules/gear/kits">kits</a> to
         </td>
         <td>Interval in between spawning attempts.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>10s</td>
       </tr>
@@ -122,7 +122,7 @@ The module uses the same syntax as <a href="/docs/modules/gear/kits">kits</a> to
           </em>
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>
           <label>delay</label>
@@ -141,7 +141,7 @@ The module uses the same syntax as <a href="/docs/modules/gear/kits">kits</a> to
           </em>
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>
           <label>delay</label>
