--- a/docs/modules/mechanics/spawns.mdx
+++ b/docs/modules/mechanics/spawns.mdx
@@ -383,7 +383,7 @@ To allow players to spawn at a bed set the bed attribute to true. Players spawni
         </td>
         <td>Delay a players respawn for this duration.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>2s</td>
       </tr>
