--- a/docs/modules/objectives/control-points.mdx
+++ b/docs/modules/objectives/control-points.mdx
@@ -111,7 +111,7 @@ Control point give a certain amount of point to the team currently holding it. O
         </td>
         <td>Time to capture the control point.</td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td colspan="2">30 sec</td>
       </tr>
