--- a/docs/modules/objectives/ctw.mdx
+++ b/docs/modules/objectives/ctw.mdx
@@ -116,7 +116,7 @@ Players have to retrieve wool blocks from the enemy teams side of the map and th
           The wools color.
         </td>
         <td>
-          <a href="/reference/colors">Dye Color Name</a>
+          <a href="/docs/reference/misc/colors">Dye Color Name</a>
         </td>
         <td></td>
       </tr>
