--- a/docs/modules/objectives/dtc.mdx
+++ b/docs/modules/objectives/dtc.mdx
@@ -131,7 +131,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
           The core casing material, used to detect breaks, and for mode changes.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
