--- a/docs/modules/objectives/dtm.mdx
+++ b/docs/modules/objectives/dtm.mdx
@@ -126,7 +126,9 @@ Completion specifies how much of the material(s) inside of the monument region m
           <label>;</label>
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">Material Pattern</a>
+          <a href="/docs/reference/items/inventory#material_matchers">
+            Material Pattern
+          </a>
         </td>
         <td></td>
       </tr>
