--- a/docs/modules/objectives/monument-modes.mdx
+++ b/docs/modules/objectives/monument-modes.mdx
@@ -65,7 +65,7 @@ The `<modes>` tag can contain any number of `<mode>` tags with different duratio
           Time from the start of the game till this mode takes effect.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
@@ -78,7 +78,7 @@ The `<modes>` tag can contain any number of `<mode>` tags with different duratio
           Material the core/destroyable changes to.
         </td>
         <td>
-          <a href="/reference/inventory#material_matchers">
+          <a href="/docs/reference/items/inventory#material_matchers">
             Single Material Pattern
           </a>
         </td>
@@ -105,7 +105,7 @@ The `<modes>` tag can contain any number of `<mode>` tags with different duratio
           all.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>60 sec</td>
       </tr>
