--- a/docs/modules/blocks/renewables.mdx
+++ b/docs/modules/blocks/renewables.mdx
@@ -158,7 +158,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           <label> rate</label>
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
