--- a/docs/modules/information/broadcasts.mdx
+++ b/docs/modules/information/broadcasts.mdx
@@ -5,7 +5,7 @@ title: Broadcasts
 
 The broadcast module allows you to broadcast a message to all players at any given point in the match.
 Inside the broadcast tag you may specify either a `<alert>` or a `<tip>` message tag with an `after=""` attribute. This attribute is required and specifies how long after the match is started the broadcast is shown. <br/>
-The text in broadcasts can be formatted by using [formatting codes](/reference/formatting).
+The text in broadcasts can be formatted by using [formatting codes](/docs/reference/misc/formatting).
 
 <span className="badge badge--warning">Note!</span> This module should **only** be
 used to to show important information that is **specific** and **unique** to the
@@ -76,7 +76,7 @@ map. It should not be used to for generic OCN related messages.
           Duration to wait after the match starts to show the message.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
       </tr>
       <tr>
@@ -88,7 +88,7 @@ map. It should not be used to for generic OCN related messages.
           messages.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
       </tr>
       <tr>
