Fix vanish logins and pool persistence between restarts * Also add /reloadpools
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -78,3 +78,8 @@ command.message.noReply = Did not find a message to reply to, use {0}
 
 # {0} = player name
 command.message.blocked = {0} is not accepting messages at this time.
+
+# {0} = # number of map pools found
+command.admin.reloadPools = Successfully reloaded {0}
+
+command.notEnabled = Sorry, this command is not enabled
