Fix wrong proto version and other inconsistencies
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/general/main.mdx
+++ b/docs/modules/general/main.mdx
@@ -58,7 +58,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <label>1.4.2</label>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -68,7 +68,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <span className="badge badge--primary">String</span>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -108,7 +108,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <span className="badge badge--primary">String</span>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -139,7 +139,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <label>1.0.0</label>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -152,7 +152,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <span className="badge badge--primary">String</span>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -165,7 +165,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <label>{`<author>`}</label>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -175,7 +175,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <label>{`<contributor>`}</label>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -221,7 +221,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
         <td>
           <span className="badge badge--primary">Gamemode ID</span>
         </td>
-        <td></td>
+        <td />
       </tr>
     </tbody>
   </table>
@@ -229,7 +229,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
 
 ```xml
 <?xml version="1.0"?>
-<map proto="1.4.2">
+<map proto="1.4.0">
 <name>Map Name</name>
 <version>1.0.0</version>
 <objective>Short description about the maps objective.</objective>
@@ -241,7 +241,7 @@ The maps version should follow the versioning schema `major.minor.patch`.
 </map>
 ```
 
-#### [Authors & Contributors](id:authors_contributors)
+#### Authors & Contributors
 
 The authors and contributers elements provide information about who created and helped create the map. There can be multiple authors and contributors to a map. The contribution attribute should be used to specify what their contribution to the map was.
 
@@ -338,7 +338,7 @@ A players name should **not** be used to credit them, instead their UUID should 
 </contributors>
 ```
 
-#### [Map Gamemode](id:gamemode)
+#### Map Gamemode
 
 The gamemode element is used to specify the gamemode(s) of the map.
 This mainly affects how the map is categorized and displayed.
