Hide vanished players from server ping Along with: * Disallow /report being used on vanished players * Fix a NPE with AntiGriefListener * Adjust /setnext staff broadcast
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -44,9 +44,9 @@ map.info.mapTag.hover = Click to list all {0} maps
 # {0} = map name
 map.nextMap = Next map: {0}
 
-# {0} = map name
-# {1} = player name (who set the map)
-map.setNext = Next map set to {0} by {1}
+# {0} = player name (who set the map)
+# {1} = map name
+map.setNext = {0} set the next map to {1}
 
 map.setNext.confirm = You may not set the next map when a restart is queued. Use -f to override.
 
