See commit message for changelog - Made implementation less verbose and made a TextException for config errors instead of using a Logger. - Revert changes to loadNewSources - Now has functionality related to specifying some specific folders in the repo you want to load maps from - Moved all parsing and construction related to MapSourceFactories into PGMConfig
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/util/src/main/i18n/templates/error.properties
+++ b/util/src/main/i18n/templates/error.properties
@@ -7,4 +7,14 @@ error.invalidFormat = Invalid format: '{0}' is not a {1}
 error.outOfRange = Invalid value: {0} is not between {1}
 error.suggestionSuffix = (did you mean '{0}'?)
 
+# {0} - the error message
+error.config = Config error: {0}
+
+error.gitNotPresent = Git is not loaded (are you running a custom version og PGM without JGit?)
+error.invalidGitRepository = A git repository was formatted incorrectly and will be ignored until reload
+# {0} - some URI(text)
+error.invalidUri = A URI({0}) was formatted incorrectly and will be ignored until reload
+# {0} - name of git directory
+error.wrongCredentials = Unable to pull from {0}, password or username incorrect
+
 error.unknown = An unknown error occurred, please see console for details.
