--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -82,6 +82,14 @@ match.alias.ok = {0} successfully renamed to {1}
 # {0} = team name (e.g. "Red Team")
 match.alias.err = A team by the name of {0} already exists.
 
+# {0} = team name (e.g. "Green Team")
+# {1} = max number of players
+match.resize.max = {0} now has a maximum size of {1} players
+
+# {0} = team name (e.g. "Green Team")
+# {1} = min number of players
+match.resize.min = {0} now has a minimum size of {1} players
+
 # {0} = duration in colon format (e.g. "13:37" for 13 minutes and 37 seconds left)
 match.timeLimit.generic = match ends after {0}
 
