Add a match limit flag to /setpool command * Added staff broadcast to restart command * Provide mute reason in blocked chat messages
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -1,5 +1,9 @@
 match.title = Match
 
+match.name = match
+
+match.name.plural = matches
+
 match.info.time = Time
 
 match.info.goals = Goals
@@ -143,6 +147,9 @@ admin.matchRunning.cycle = You may not cycle during a match. Use -f to override.
 admin.queueRestart.restartingNow = Server will restart now.
 
 admin.queueRestart.restartQueued = Server will restart at the next available opportunity.
+
+# {0} = player name
+admin.queueRestart.broadcast = {0} has queued a server restart
 
 admin.cancelRestart.restartUnqueued = Queued restart countdown cancelled.
 
