--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -73,14 +73,14 @@ map.protectPortal = You may not obstruct this area
 # {0} = map pool name (e.g. "Mega")
 pool.change = Map pool has been set to {0} in order to better adjust to the current player count.
 
-# {0} = map pool name (e.g. "Mega")
-# {1} = player name
-pool.change.force = The map pool has been set to {0} by {1}
+# {0} = player name
+# {1} = map pool name (e.g. "Mega")
+pool.change.force = {0} set the map pool to {1}
 
-# {0} = map pool name (e.g. "Mega")
-# {1} = a duration (e.g. "2 hours")
-# {2} = player name
-pool.change.forceTimed = The map pool has been set to {0} for {1} by {2}
+# {0} = player name
+# {1} = map pool name (e.g. "Mega")
+# {2} = a limit restriction (e.g. "2 hours", "5 matches", or both "2 hours or 5 matches")
+pool.change.forceLimit = {0} set the map pool to {1} for {2}
 
 # {0} = number of positions
 pool.skip = Skipped a total of {0} positions.
