--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -89,6 +89,11 @@ misc.blocks = {0} blocks
 # "Team" (e.g. like in, "Red Team" or "Blue Team")
 misc.team = Team
 
+# A choice with two options (e.g. 1 hour or 5 matches)
+# {0} = the first option
+# {1} = the second option
+misc.or = {0} or {1}
+
 # do not translate, keep as-is
 misc.snowman = ☃
 
