Add a broadcast to /cancelrestart
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -151,6 +151,9 @@ admin.queueRestart.restartQueued = Server will restart at the next available opp
 # {0} = player name
 admin.queueRestart.broadcast = {0} has queued a server restart
 
+# {0} = player name
+admin.cancelRestart.broadcast = {0} has canceled the server restart
+
 admin.cancelRestart.restartUnqueued = Queued restart countdown cancelled.
 
 admin.cancelRestart.noActionTaken = No active or queued restart countdowns found.
