--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -152,7 +152,7 @@ admin.queueRestart.restartQueued = Server will restart at the next available opp
 admin.queueRestart.broadcast = {0} has queued a server restart
 
 # {0} = player name
-admin.cancelRestart.broadcast = {0} has canceled the server restart
+admin.cancelRestart.broadcast = {0} has canceled a queued server restart
 
 admin.cancelRestart.restartUnqueued = Queued restart countdown cancelled.
 
