Complete migration to new text library A few bugs remain including: * Vote book clicking issue * Minecraft key translation bug
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -238,3 +238,11 @@ blitz.livesRemaining = You have {0} remaining.
 
 # {0} = "Blitz"
 blitz.joinDenied = You may not join during a {0} match.
+
+blitz.victoryCondition = most survivors
+
+goals.victoryCondition = most objectives
+
+tie.victoryCondition = nobody wins
+
+score.victoryCondition = highest score
