--- a/util/src/main/i18n/templates/error.properties
+++ b/util/src/main/i18n/templates/error.properties
@@ -10,3 +10,5 @@ error.outOfRange = Invalid value: {0} is not between {1}
 error.suggestionSuffix = (did you mean '{0}'?)
 
 error.unknown = An unknown error occurred, please see console for details
+
+error.player.participationState = Internal error changing player participation state
